tests/e2e/semantics/nested_types4.story
function foo returns map[string,list[string]]
	return {20: ["foo", "bar"]}

a = foo()
